# ebayspy

./: .env.example  .gitignore  README.md  pyproject.toml
.codex/: hooks.json  pretool_graphify.py
ebayspy/: cli.py  config.py  demand.py  ebay.py  fx.py  insights.py  market.py  matching.py  models.py  risk.py  semantic.py  service.py  storage.py  telegram.py  vision.py  wake.py
scripts/: enable-wake-sudo.sh  install-launchd.sh  install-wakepoll.sh  run-local.sh  uninstall-launchd.sh  uninstall-wakepoll.sh  wake-poll.sh
systemd/: ebayspy.service
tests/: test_config.py  test_demand.py  test_ebay.py  test_fx.py  test_insights.py  test_market.py  test_matching.py  test_risk.py  test_service.py  test_storage.py  test_telegram.py  test_vision.py  test_wake.py
