[project]
name = "ebayspy"
version = "0.1.0"
description = "Track eBay sellers and send Telegram alerts for newly listed items."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "httpx>=0.27.2",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
]

[tool.setuptools.packages.find]
include = ["ebayspy*"]

[project.scripts]
ebayspy = "ebayspy.cli:main"

[tool.ruff]
line-length = 100
