[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ebayspy"
version = "0.1.0"
description = "Track eBay sellers and send Telegram alerts for newly listed items."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.2",
    "python-dotenv>=1.0.1",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
]
# Semantic matching (model2vec — static embeddings, no torch). Install with:
#   pip install -e ".[nlp]"
nlp = [
    "model2vec>=0.3",
    "numpy>=1.24",
]
# Image verification + condition read (CLIP via fastembed — ONNX, no torch).
#   pip install -e ".[vision]"
vision = [
    "fastembed>=0.3",
    "pillow>=10.0",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
include = ["ebayspy*"]

[project.scripts]
ebayspy = "ebayspy.cli:main"

[tool.ruff]
line-length = 100
